--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-iced = "0.13.1"
+iced = { version = "0.13.1", features = ["tokio"] }
 rfd = "0.15.4"
 serde = "1.0.228"
 serde_json = "1.0.145"
